<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:contentDescription="@string/desc_btn_coin"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgCoin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_coin"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCoinTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:text="@string/btn_coin_title"
            android:textColor="@color/text_brown_dark"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCoinSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_coin_subtitle"
            android:textColor="@color/text_brown_dark"
            android:textSize="@dimen/text_small" />
    </LinearLayout>
</FrameLayout>