<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_dark"
    android:padding="@dimen/spacing_normal">

    <TextView
        android:id="@+id/tvTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:letterSpacing="0.15"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="time A" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="0"
        android:textColor="@color/secondary_yellow"
        android:textSize="@dimen/text_display_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTeamName" />

    <LinearLayout
        android:id="@+id/rowChips1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScore">

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnPlus1"
            android:layout_width="@dimen/chip_button_size"
            android:layout_height="@dimen/chip_button_size"
            android:background="@drawable/ic_one"
            android:contentDescription="@string/desc_plus_1"
            android:scaleType="fitCenter" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnPlus3"
            android:layout_width="@dimen/chip_button_size"
            android:layout_height="@dimen/chip_button_size"
            android:background="@drawable/ic_three"
            android:contentDescription="@string/desc_plus_3"
            android:scaleType="fitCenter" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnPlus6"
            android:layout_width="@dimen/chip_button_size"
            android:layout_height="@dimen/chip_button_size"
            android:background="@drawable/ic_six"
            android:contentDescription="@string/desc_plus_3"
            android:scaleType="fitCenter" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowChips2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rowChips1">

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnPlus9"
            android:layout_width="@dimen/chip_button_size"
            android:layout_height="@dimen/chip_button_size"
            android:background="@drawable/ic_nine"
            android:contentDescription="@string/desc_plus_9"
            android:scaleType="fitCenter" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnPlus12"
            android:layout_width="@dimen/chip_button_size"
            android:layout_height="@dimen/chip_button_size"
            android:background="@drawable/ic_twelve"
            android:contentDescription="@string/desc_plus_12"
            android:scaleType="fitCenter" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnUndo"
            android:layout_width="@dimen/chip_button_size"
            android:layout_height="@dimen/chip_button_size"
            android:background="@null"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/desc_undo"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_revert" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>